Add HomePage and router

--- a/frontend/web/src/app/app.component.scss
+++ b/frontend/web/src/app/app.component.scss
@@ -1,1 +1,32 @@
+app-root {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 56px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 
+app-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+app-root > app-home-page {
+  overflow-y: auto;
+}
+
+
+@media (max-width: 720px) {
+  app-root {
+    top: 92px;
+  }
+
+  app-root > app-home-page{
+    overflow-y: visible;
+  }
+}
