--- a/frontend/web/src/app/pages/home-page/home-page.component.html
+++ b/frontend/web/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,8 @@
-<p>
-  home-page works!
-</p>
+<header class="header-background">
+  <div class="header-section">
+    <div class="header-headline">
+      <h1 class="mat-h1">Athena Library Management System</h1>
+      <h2>Powerful, Fast and Elegant</h2>
+    </div>
+  </div>
+</header>
