--- a/frontend/web/src/app/shared/navbar/navbar.component.scss
+++ b/frontend/web/src/app/shared/navbar/navbar.component.scss
@@ -38,10 +38,13 @@
   display: none;
 }
 
+.docs-navbar-hide-small i.material-icons {
+  margin-right: 6px;
+}
+
 .docs-navbar-show-small {
   display: none;
 }
-
 
 /**
   * Rules for when the device is detected to be a small screen.
