--- a/frontend/web/src/styles.scss
+++ b/frontend/web/src/styles.scss
@@ -29,5 +29,10 @@ $theme: mat-light-theme($primary, $accent);
 
 
 body {
+  font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   margin: 0;
+}
+
+h1, h2 {
+  font-weight: 400;
 }
