--- a/frontend/web/src/app/shared/navbar/navbar.component.html
+++ b/frontend/web/src/app/shared/navbar/navbar.component.html
@@ -10,11 +10,11 @@
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="guides">User Guides</a>
   <div class="flex-spacer"></div>
   <a mat-button class="docs-button docs-navbar-hide-small" aria-label="Login">
-    <i class="material-icons">account_circle</i>
+    <i class="material-icons" (click)="openLogin()">account_circle</i>
     Login
   </a>
   <a mat-icon-button class="docs-button docs-navbar-show-small" aria-label="Login">
-    <i class="material-icons">account_circle</i>
+    <i class="material-icons" (click)="openLogin()">account_circle</i>
   </a>
 </nav>
 <nav class="docs-navbar docs-navbar-show-small">
