--- a/frontend/web/src/app/shared/navbar/navbar.component.html
+++ b/frontend/web/src/app/shared/navbar/navbar.component.html
@@ -9,11 +9,18 @@
      *ngFor="let key of sectionKeys">{{sections[key]}}</a>
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="guides">User Guides</a>
   <div class="flex-spacer"></div>
-  <a mat-button class="docs-button docs-navbar-hide-small" aria-label="Login" (click)="openLogin()">
+  <a *ngIf="!username" mat-button class="docs-button docs-navbar-hide-small" aria-label="Login" (click)="openLogin()">
     <i class="material-icons">account_circle</i>
-    {{username == null? "Login":username}}
+    {{'Login'}}
   </a>
-  <a mat-icon-button class="docs-button docs-navbar-show-small" aria-label="Login" (click)="openLogin()">
+  <a *ngIf="username" mat-button class="docs-button docs-navbar-hide-small" aria-label="User">
+    <i class="material-icons">account_circle</i>
+    {{username}}
+  </a>
+  <a *ngIf="!username" mat-icon-button class="docs-button docs-navbar-show-small" aria-label="Login" (click)="openLogin()">
+    <i class="material-icons">account_circle</i>
+  </a>
+  <a *ngIf="username" mat-icon-button class="docs-button docs-navbar-show-small" aria-label="Login">
     <i class="material-icons">account_circle</i>
   </a>
 </nav>
