--- a/frontend/web/src/app/shared/login-dialog/login-dialog.component.scss
+++ b/frontend/web/src/app/shared/login-dialog/login-dialog.component.scss
@@ -1,9 +1,13 @@
-.mat-form{
+.mat-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+mat-dialog-actions {
+  justify-content: space-between;
 }
 
 
