--- a/frontend/web/src/app/shared/navbar/navbar.component.html
+++ b/frontend/web/src/app/shared/navbar/navbar.component.html
@@ -9,20 +9,34 @@
      *ngFor="let key of sectionKeys">{{sections[key]}}</a>
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="guides">User Guides</a>
   <div class="flex-spacer"></div>
-  <a *ngIf="!authService.user" mat-button class="docs-button docs-navbar-hide-small" aria-label="Login" (click)="openLogin()">
+  <a *ngIf="!authService.user" mat-button class="docs-button docs-navbar-hide-small" aria-label="Login"
+     (click)="openLogin()">
     <i class="material-icons">account_circle</i>
     {{'Login'}}
   </a>
-  <a *ngIf="authService.user" mat-button class="docs-button docs-navbar-hide-small" aria-label="User">
+  <a *ngIf="authService.user" mat-button class="docs-button docs-navbar-hide-small" aria-label="User"
+     [matMenuTriggerFor]="userMenu">
     <i class="material-icons">account_circle</i>
     {{authService.user.username}}
   </a>
-  <a *ngIf="!authService.user" mat-icon-button class="docs-button docs-navbar-show-small" aria-label="Login" (click)="openLogin()">
+  <a *ngIf="!authService.user" mat-icon-button class="docs-button docs-navbar-show-small" aria-label="Login"
+     (click)="openLogin()">
     <i class="material-icons">account_circle</i>
   </a>
-  <a *ngIf="authService.user" mat-icon-button class="docs-button docs-navbar-show-small" aria-label="User">
+  <a *ngIf="authService.user" mat-icon-button class="docs-button docs-navbar-show-small" aria-label="User"
+     [matMenuTriggerFor]="userMenu">
     <i class="material-icons">account_circle</i>
   </a>
+  <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+    <button mat-menu-item>
+      <mat-icon>settings</mat-icon>
+      <span>Settings</span>
+    </button>
+    <button mat-menu-item (click)="logout()">
+      <mat-icon>power_settings_new</mat-icon>
+      <span>Logout</span>
+    </button>
+  </mat-menu>
 </nav>
 <nav class="docs-navbar docs-navbar-show-small">
   <a mat-button class="docs-navbar-link"
