publication-page-component

--- a/frontend/web/src/app/pages/publication-page/publication-page.component.html
+++ b/frontend/web/src/app/pages/publication-page/publication-page.component.html
@@ -1,3 +1,4 @@
+<app-search-card class="publication-search-card" (searchComplete)="handleSearchComplete($event)"></app-search-card>
 <div class="publication-page-content">
-  <app-search-card></app-search-card>
+
 </div>
