--- a/frontend/web/src/app/pages/publication-page/search-card/search-card.component.html
+++ b/frontend/web/src/app/pages/publication-page/search-card/search-card.component.html
@@ -1,5 +1,5 @@
 <mat-card class="search-card">
-  <mat-card-content>
+  <mat-card-content class="search-card-content">
     <form class="mat-form" #f="ngForm">
       <mat-form-field [floatLabel]="'never'" class="search-form">
         <input type="text" matInput [(ngModel)]="searchValue" name="searchValue"/>
