--- a/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.html
+++ b/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.html
@@ -8,6 +8,6 @@
     {{publication?.introduction}}
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button><a [routerLink]="this.getDetailUrl()">Details</a></button>
+    <button mat-button><a [routerLink]="getDetailUrl()">Details</a></button>
   </mat-card-actions>
 </mat-card>
