publication-page-component

--- a/frontend/web/src/app/pages/publication-page/search-card/search-card.component.scss
+++ b/frontend/web/src/app/pages/publication-page/search-card/search-card.component.scss
@@ -12,6 +12,11 @@
       width: 100%;
       display: flex;
       justify-content: center;
+
+      button{
+        margin-bottom: 1.25em;
+        margin-left: 0.25em;
+      }
     }
   }
 }
