--- a/frontend/web/src/app/pages/publication-page/search-card/search-card.component.scss
+++ b/frontend/web/src/app/pages/publication-page/search-card/search-card.component.scss
@@ -12,10 +12,20 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      font-size: 20px;
 
-      button{
-        margin-bottom: 1.25em;
+      input#search-value {
+
+      }
+
+      button#search-button {
+        margin-bottom: 1.75em;
         margin-left: 0.25em;
+
+        span.mat-button-wrapper{
+          font-size: 20px;
+
+        }
       }
     }
   }
