--- a/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.html
+++ b/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.html
@@ -3,7 +3,7 @@
     <mat-card-title>{{publication.title}}</mat-card-title>
 
   </mat-card-header>
-  <img mat-card-image src="{{publication.coverUrl?.href}}" alt="Cover of the publication">
+  <img mat-card-image src="{{publication.coverUrl}}" alt="Cover of the publication">
   <mat-card-content>
     {{publication?.introduction}}
   </mat-card-content>
