--- a/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.scss
+++ b/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.scss
@@ -1,3 +1,18 @@
-.search-result-card{
-  width: 20%;
+.search-result-card {
+  width: 100%;
+  margin: 20px;
+
+}
+
+@media (max-width: 720px) {
+  mat-card-content#introduction {
+    display: none;
+  }
+
+  .search-result-card {
+    width: 100%;
+    margin: 2px;
+
+  }
+
 }
