--- a/frontend/web/src/app/pages/publication-page/search-card/search-card.component.html
+++ b/frontend/web/src/app/pages/publication-page/search-card/search-card.component.html
@@ -11,7 +11,9 @@
           <i>Search</i>
         </mat-placeholder>
       </mat-form-field>
-      <button mat-button color="primary" (click)="search()" id="search-button">Search</button>
+      <button mat-button color="primary" (click)="search()" id="search-button" [disabled]="searchButtonDisabled">
+        Search
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
