--- a/frontend/web/src/app/pages/publication-page/search-card/search-card.component.scss
+++ b/frontend/web/src/app/pages/publication-page/search-card/search-card.component.scss
@@ -14,24 +14,65 @@
       justify-content: center;
       font-size: 20px;
 
-      input#search-value {
-
-      }
-
       button#search-button {
         margin-bottom: 1.75em;
         margin-left: 0.25em;
 
-        span.mat-button-wrapper{
+        span.mat-button-wrapper {
           font-size: 20px;
 
         }
       }
+
+
     }
   }
 }
 
 .search-form {
   width: 40%;
+}
+
+@media (max-width: 720px) {
+  .search-card {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+
+    .search-card-content {
+      display: flex;
+      justify-content: center;
+      width: 90%;
+
+      form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 20px;
+
+        .search-form {
+          width: 100%;
+
+        }
+
+        button#search-button {
+          margin-bottom: 0.1em;
+          margin-left: 0.1em;
+          width: 100%;
+          span.mat-button-wrapper {
+            font-size: 20px;
+
+          }
+        }
+
+
+      }
+    }
+  }
+
+
+
 }
 
