--- a/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.html
+++ b/frontend/web/src/app/pages/publication-page/search-result-card/search-result-card.component.html
@@ -4,10 +4,10 @@
 
   </mat-card-header>
   <img mat-card-image src="{{publication.coverUrl}}" alt="Cover of the publication">
-  <mat-card-content>
+  <mat-card-content id="introduction">
     {{publication?.introduction}}
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button><a [routerLink]="getDetailUrl()">Details</a></button>
+   <a mat-raised-button color="primary" [routerLink]="getDetailUrl()">Details</a>
   </mat-card-actions>
 </mat-card>
