--- a/frontend/web/src/styles.scss
+++ b/frontend/web/src/styles.scss
@@ -2,6 +2,7 @@
 @import './app/shared/navbar/navbar-theme';
 @import './app/pages/home-page/home-page-theme';
 @import './app/pages/publication-page/publication-page-theme';
+@import './app/pages/book-detail-page/book-detail-page-theme';
 @import '../node_modules/@angular/material/theming';
 
 @mixin material-docs-app-theme($theme) {
@@ -14,6 +15,7 @@
   @include nav-bar-theme($theme);
   @include home-page-theme($theme);
   @include publication-page-theme($theme);
+  @include book-detail-page-theme($theme);
 }
 
 // Include material core styles.
