--- a/frontend/web/src/app/pages/book-detail-page/book-detail-page.component.scss
+++ b/frontend/web/src/app/pages/book-detail-page/book-detail-page.component.scss
@@ -3,8 +3,14 @@
 }
 
 app-publication-preface {
-  height: 100%;
+  height: 95%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
+app-publication-basic-info {
+  height: 90%;
+  width: 90%;
 }
 
 div#book-title {
