--- a/frontend/web/src/app/shared/publication-preface/publication-preface.component.scss
+++ b/frontend/web/src/app/shared/publication-preface/publication-preface.component.scss
@@ -1,6 +1,12 @@
 img {
   width: auto;
   height: auto;
+  margin: auto;
   max-width: 100%;
   max-height: 100%;
+}
+
+mat-card {
+  height: 90%;
+  width: 90%;
 }
