--- a/frontend/web/src/app/pages/publication-page/publication-page.component.html
+++ b/frontend/web/src/app/pages/publication-page/publication-page.component.html
@@ -1,5 +1,4 @@
 <app-search-card class="publication-search-card" (searchComplete)="handleSearchComplete($event)"></app-search-card>
 <div class="publication-page-content">
-  <app-search-result-card *ngFor="let result of searchResults" [publication]="result"
-                          id="search-result"></app-search-result-card>
+  <app-search-result-card *ngFor="let result of searchResults" [publication]="result"></app-search-result-card>
 </div>
