--- a/frontend/web/src/app/pages/book-detail-page/book-detail-page.component.html
+++ b/frontend/web/src/app/pages/book-detail-page/book-detail-page.component.html
@@ -1,28 +1,31 @@
 <div *ngIf="book">
-  <div id="book-title"><h1>{{book.title}}</h1></div>
-  <mat-tab-group>
-    <mat-tab label="Basic Info">
-      <div class="basic-info">
-        <mat-grid-list [cols]="4" rowHeight="1:1">
-          <mat-grid-tile [colspan]="2" [rowspan]="2">
-            <app-publication-preface [source]="book.preface"></app-publication-preface>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="2">
-            <app-publication-basic-info [publication]="book">
-              <!--todo: use template outlet to custom display-->
-            </app-publication-basic-info>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="2">
+  <mat-card class="book-title"><h1>{{book.title}}</h1></mat-card>
+  <div id="book-details">
+    <mat-card>
+      <mat-tab-group>
+        <mat-tab label="Basic Info">
+          <div class="basic-info">
+            <mat-grid-list [cols]="4" rowHeight="1:1">
+              <mat-grid-tile [colspan]="2" [rowspan]="2">
+                <app-publication-preface [source]="book.preface"></app-publication-preface>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan]="1" [rowspan]="2">
+                <app-publication-basic-info [publication]="book">
+                </app-publication-basic-info>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan]="1" [rowspan]="2">
 
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="2" [rowspan]="1">
-            {{book.introduction}}
-          </mat-grid-tile>
-        </mat-grid-list>
-      </div>
-    </mat-tab>
-    <mat-tab label="Copy Info">
-    </mat-tab>
-  </mat-tab-group>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan]="2" [rowspan]="1">
+                {{book.introduction}}
+              </mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </mat-tab>
+        <mat-tab label="Copy Info">
+        </mat-tab>
+      </mat-tab-group>
+    </mat-card>
+  </div>
 </div>
 
