--- a/frontend/web/src/app/pages/book-detail-page/_book-detail-page-theme.scss
+++ b/frontend/web/src/app/pages/book-detail-page/_book-detail-page-theme.scss
@@ -4,4 +4,12 @@
   $warn: map-get($theme, warn);
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
+
+  #book-details {
+    background-color: mat-color($background, background);
+    > mat-card {
+      background-color: white;
+    }
+  }
+
 }
