--- a/frontend/web/src/app/shared/publication-basic-info/publication-basic-info.component.html
+++ b/frontend/web/src/app/shared/publication-basic-info/publication-basic-info.component.html
@@ -2,17 +2,22 @@
   <mat-list>
     <mat-list-item>
       <p matLine><b>Title</b></p>
-      <p matLine class="list-value"><span class="list-value">{{publication.title}}</span></p>
+      <div matLine><span class="list-value">{{publication.title}}</span></div>
     </mat-list-item>
     <mat-list-item *ngIf="publication.authors">
       <p matLine><b>Author</b></p>
       <div matLine>
         <mat-chip-list>
-          <mat-chip *ngFor="let author of publication.authors">
+          <mat-chip *ngFor="let author of publication.authors" class="list-value">
             {{author}}
           </mat-chip>
         </mat-chip-list>
       </div>
     </mat-list-item>
+    <mat-list-item *ngIf="publication.language">
+      <p matLine><b>Language</b></p>
+      <div matLine><span class="list-value">{{publication.language}}</span></div>
+    </mat-list-item>
   </mat-list>
 </mat-card>
+<!--todo: 每个键值对单独使用一个mat-card进行表示-->
